@@ -10,7 +10,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: auth1.c,v 1.30 2001/12/27 19:54:53 markus Exp $");
+RCSID("$OpenBSD: auth1.c,v 1.31 2001/12/27 20:39:58 markus Exp $");
 
 #include "xmalloc.h"
 #include "rsa.h"
@@ -120,8 +120,7 @@ do_authloop(Authctxt *authctxt)
 				verbose("Kerberos authentication disabled.");
 			} else {
 				char *kdata = packet_get_string(&dlen);
-
-				packet_integrity_check(plen, 4 + dlen, type);
+				packet_done();
 
 				if (kdata[0] == 4) { /* KRB_PROT_VERSION */
 #ifdef KRB4
@@ -181,7 +180,7 @@ do_authloop(Authctxt *authctxt)
 			 * IP-spoofing on a local network.)
 			 */
 			client_user = packet_get_string(&ulen);
-			packet_integrity_check(plen, 4 + ulen, type);
+			packet_done();
 
 			/* Try to authenticate using /etc/hosts.equiv and .rhosts. */
 			authenticated = auth_rhosts(pw, client_user);
@@ -211,7 +210,7 @@ do_authloop(Authctxt *authctxt)
 				verbose("Warning: keysize mismatch for client_host_key: "
 				    "actual %d, announced %d",
 				     BN_num_bits(client_host_key->rsa->n), bits);
-			packet_integrity_check(plen, (4 + ulen) + 4 + elen + nlen, type);
+			packet_done();
 
 			authenticated = auth_rhosts_rsa(pw, client_user,
 			    client_host_key);
@@ -229,7 +228,7 @@ do_authloop(Authctxt *authctxt)
 			if ((n = BN_new()) == NULL)
 				fatal("do_authloop: BN_new failed");
 			packet_get_bignum(n, &nlen);
-			packet_integrity_check(plen, nlen, type);
+			packet_done();
 			authenticated = auth_rsa(pw, n);
 			BN_clear_free(n);
 			break;
@@ -245,7 +244,7 @@ do_authloop(Authctxt *authctxt)
 			 * not visible to an outside observer.
 			 */
 			password = packet_get_string(&dlen);
-			packet_integrity_check(plen, 4 + dlen, type);
+			packet_done();
 
 #ifdef USE_PAM
 			/* Do PAM auth with password */
@@ -283,7 +282,7 @@ do_authloop(Authctxt *authctxt)
 			if (options.challenge_response_authentication == 1) {
 				char *response = packet_get_string(&dlen);
 				debug("got response '%s'", response);
-				packet_integrity_check(plen, 4 + dlen, type);
+				packet_done();
 				authenticated = verify_response(authctxt, response);
 				memset(response, 'r', dlen);
 				xfree(response);
@@ -370,7 +369,7 @@ do_authentication(void)
 
 	/* Get the user name. */
 	user = packet_get_string(&ulen);
-	packet_integrity_check(plen, (4 + ulen), SSH_CMSG_USER);
+	packet_done();
 
 	if ((style = strchr(user, ':')) != NULL)
 		*style++ = '\0';
