@@ -13,7 +13,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: sshconnect1.c,v 1.43 2001/12/27 18:22:16 markus Exp $");
+RCSID("$OpenBSD: sshconnect1.c,v 1.44 2001/12/27 20:39:58 markus Exp $");
 
 #include <openssl/bn.h>
 #include <openssl/evp.h>
@@ -109,8 +109,7 @@ try_agent_authentication(void)
 					  type);
 
 		packet_get_bignum(challenge, &clen);
-
-		packet_integrity_check(plen, clen, type);
+		packet_done();
 
 		debug("Received RSA challenge from server.");
 
@@ -244,8 +243,7 @@ try_rsa_authentication(int idx)
 	if ((challenge = BN_new()) == NULL)
 		fatal("try_rsa_authentication: BN_new failed");
 	packet_get_bignum(challenge, &clen);
-
-	packet_integrity_check(plen, clen, type);
+	packet_done();
 
 	debug("Received RSA challenge from server.");
 
@@ -359,8 +357,7 @@ try_rhosts_rsa_authentication(const char *local_user, Key * host_key)
 	if ((challenge = BN_new()) == NULL)
 		fatal("try_rhosts_rsa_authentication: BN_new failed");
 	packet_get_bignum(challenge, &clen);
-
-	packet_integrity_check(plen, clen, type);
+	packet_done();
 
 	debug("Received RSA challenge for host key from server.");
 
@@ -467,7 +464,7 @@ try_krb4_authentication(void)
 		memcpy(auth.dat, reply, auth.length);
 		xfree(reply);
 
-		packet_integrity_check(plen, 4 + auth.length, type);
+		packet_done();
 
 		/*
 		 * If his response isn't properly encrypted with the session
@@ -576,8 +573,7 @@ try_krb5_authentication(krb5_context *context, krb5_auth_context *auth_context)
 
 		/* Get server's response. */
 		ap.data = packet_get_string((unsigned int *) &ap.length);
-
-		packet_integrity_check(payload_len, 4 + ap.length, type);
+		packet_done();
 		/* XXX je to dobre? */
 
 		problem = krb5_rd_rep(*context, *auth_context, &ap, &reply);
@@ -842,7 +838,7 @@ try_challenge_response_authentication(void)
 			return 0;
 		}
 		challenge = packet_get_string(&clen);
-		packet_integrity_check(payload_len, (4 + clen), type);
+		packet_done();
 		snprintf(prompt, sizeof prompt, "%s%s", challenge,
 		    strchr(challenge, '\n') ? "" : "\nResponse: ");
 		xfree(challenge);
@@ -968,13 +964,11 @@ ssh_kex(char *host, struct sockaddr *hostaddr)
 
 	supported_ciphers = packet_get_int();
 	supported_authentications = packet_get_int();
+	packet_done();
 
 	debug("Received server public key (%d bits) and host key (%d bits).",
 	    BN_num_bits(server_key->rsa->n), BN_num_bits(host_key->rsa->n));
 
-	packet_integrity_check(payload_len,
-	    8 + 4 + sum_len + 0 + 4 + 0 + 0 + 4 + 4 + 4,
-	    SSH_SMSG_PUBLIC_KEY);
 	if (verify_host_key(host, hostaddr, host_key) == -1)
 		fatal("Host key verification failed.");
 
